Update header section and fix z-index bug

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,18 @@
 
 html{
     scroll-behavior: smooth;
+
 }
 
 *{
     scroll-margin-bottom: 90px;
+}
+
+/* custom styles */
+.perspective{
+    perspective: 100px;
+}
+
+.link-hover:hover svg{
+    stroke: #7EFFD1;
 }
